⚰️ Fix: Dark mode removed and dead code removed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,11 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @import "~@angular/material/theming";
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat-core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
 $football-score-primary: mat-palette($mat-indigo);
 $football-score-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
 $football-score-warn: mat-palette($mat-red);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $football-score-theme: mat-light-theme(
   (
     color: (
@@ -28,31 +15,15 @@ $football-score-theme: mat-light-theme(
     ),
   )
 );
-$angular-dark-theme: mat-dark-theme(
-  (
-    color: (
-      primary: $football-score-primary,
-      accent: $football-score-accent,
-      warn: $football-score-warn,
-    ),
-  )
-);
-.darkMode {
-  @include angular-material-color($angular-dark-theme);
-}
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+
 @include angular-material-theme($football-score-theme);
 
 /* You can add global styles to this file, and also import other style files */
-
 html,
 body {
-  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-button {
-  outline: 0 !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  background-color: #4158d0;
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%);
 }
